--- a/pics.html
+++ b/pics.html
@@ -96,15 +96,16 @@
                     </button>
                   </form>
                 </div>
-              </div>
             </div>
           </nav>
         </div>
-      </div>
+    </div>
+
+    <div class="container mt-5">
       <div class="row">
         <div class="col">
-          <h1>Welcome to my photo portfolio!</h1>
-          <p>This is a collection of my favorite shots.</p>
+          <h2>Welcome to my photo portfolio!</h2>
+          <p>Take a look at some of my favourite shots!</p>
         </div>
       </div>
     </div>
