--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
+
+    <style>
+      .text-center {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar bg-body-tertiary fixed-top">
@@ -32,7 +38,9 @@
           aria-labelledby="offcanvasNavbarLabel"
         >
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Matt's shots</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+              Matt's shots
+            </h5>
             <button
               type="button"
               class="btn-close"
@@ -43,10 +51,20 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="index.html">
+                  Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pics.html">Uni</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="pics.html">Pics</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pics.html">Misc.</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -85,6 +103,70 @@
         </div>
       </div>
     </nav>
+
+    <div class="container" style="margin-top: 100px">
+      <div class="row justify-content-center">
+        <div class="col-3">
+          <img
+            src="assets/avatar.png"
+            class="img-thumbnail rounded-circle"
+            alt="Avatar"
+          />
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-6">
+          <h1 class="text-center">Hi!</h1>
+          <p class="text-center">*insert description here*</p>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-4">
+          <div class="card" style="width: 18rem">
+            <img src="assets/Mcgill.webp" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">University</h5>
+              <p class="card-text">
+                I'm studying Computer Engineering at Mcgill University in
+                Montreal, Canada.
+              </p>
+              <a href="#" class="btn btn-primary">Find out more?</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width: 18rem">
+            <img src="assets/DSC00750.JPG" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Photography</h5>
+              <p class="card-text">
+                I am a photography hobbyist who mainly does event & travel
+                photography.
+              </p>
+              <a href="pics.html" class="btn btn-primary">Find out more?</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width: 18rem">
+            <img
+              src="assets/Penang trip-17.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Miscellaneous</h5>
+              <p class="card-text">
+                I have way too many hyperfixations that I dabble in, sometimes
+                they end up as a long term hobby!
+              </p>
+              <a href="#" class="btn btn-primary">Find out more?</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
